--- a/php.ini
+++ b/php.ini
@@ -13,5 +13,8 @@ extension=php_mbstring.dll
 ;zip 系の処理を許可する
 extension=php_zip.dll
 
+;curlを使えるようにする
+extension=php_curl.dll
+
 ;時刻を東京に
 date.timezone = "Asia/Tokyo"
